--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,12 @@ version: '3'
 services:
   web:
     build: .
-    ports:
-      - "8000:8000"
+    command: python manage.py runserver 0.0.0.0:8000
+    restart: always
+    expose:
+      - "8000"
+    volumes:
+      - .:/app
   nginx:
     image: nginx
     ports:
