--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-worker_processes 1;
+worker_processes 4;
 
 events { worker_connections 1024; }
 
@@ -11,9 +11,9 @@ http {
 
     server {
         listen 80;
-
+        server_name localhost;
         location / {
-            proxy_pass http://app;
+            proxy_pass http://web;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
