--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,39 @@
-asgiref==3.3.0
-autograd==1.3
+asgiref==3.6.0
+astor==0.8.1
+autograd==1.5
 autograd-gamma==0.5.0
-certifi==2020.11.8
-cycler==0.10.0
-Django==3.0.5
-djangorestframework==3.12.2
-dnspython==2.0.0
-future==0.18.2
-kiwisolver==1.3.1
-lifelines==0.25.6
-matplotlib==3.3.2
-numpy==1.19.4
-pandas==1.1.4
-patsy==0.5.1
-Pillow==8.0.1
-plotly==4.12.0
-pymongo==3.11.0
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2020.4
-retrying==1.3.3
-scipy==1.5.4
-six==1.15.0
-sqlparse==0.2.4
+certifi==2022.12.7
+contourpy==1.0.7
+cycler==0.11.0
+Django==4.1.7
+djangorestframework==3.14.0
+dnspython==2.3.0
+et-xmlfile==1.1.0
+fonttools==4.38.0
+formulaic==0.5.2
+future==0.18.3
+importlib-resources==5.12.0
+interface-meta==1.3.0
+kiwisolver==1.4.4
+lifelines==0.27.4
+matplotlib==3.7.0
+numpy==1.24.2
+openpyxl==3.0.10
+packaging==23.0
+pandas==1.5.3
+patsy==0.5.3
+Pillow==9.4.0
+plotly==5.13.1
+pymongo==4.3.3
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2022.7.1
+retrying==1.3.4
+scipy==1.10.1
+six==1.16.0
+sqlparse==0.4.3
+tenacity==8.2.2
+typing_extensions==4.5.0
+wrapt==1.15.0
+zipp==3.15.0
