--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,21 @@
 version: '3'
 
 services:
-  web:
-    build: .
-    command: python manage.py runserver 0.0.0.0:8000
-    restart: always
-    expose:
-      - "8000"
-    volumes:
-      - .:/app
   nginx:
     image: nginx
+    restart: always
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./python_nctu_cancer:/app
     depends_on:
       - web
+  web:
+    build: .
+    command: python manage.py runserver 0.0.0.0:80
+    restart: always
+    expose:
+      - "80"
+    volumes:
+      - .:/app
