--- a/nginx.conf
+++ b/nginx.conf
@@ -1,17 +1,24 @@
+user  root;
 worker_processes 4;
 
-events { worker_connections 1024; }
+error_log  /var/log/nginx/error.log warn;
+
+events { 
+    worker_connections 1024; 
+}
 
 http {
+    include             mime.types;
+    default_type        application/octet-stream;
     sendfile on;
-
+    
     upstream app {
-        server web:8000;
+        server web;
     }
 
     server {
         listen 80;
-        server_name localhost;
+
         location / {
             proxy_pass http://web;
             proxy_set_header Host $host;
