--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,7 @@ user  root;
 worker_processes 4;
 
 error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
 
 events { 
     worker_connections 1024; 
@@ -10,14 +11,19 @@ events {
 http {
     include             mime.types;
     default_type        application/octet-stream;
+
+    log_format  main  '$host $remote_addr - $remote_user [$time_local] '
+                      '"$request" $status $body_bytes_sent '
+                      '"$http_referer" "$http_user_agent" '
+                      '$request_time';
+
+    access_log  /var/log/nginx/access.log  main;
+
     sendfile on;
-    
-    upstream app {
-        server web;
-    }
 
     server {
         listen 80;
+        server_name exDoSurvive.com;
 
         location / {
             proxy_pass http://web;
