--- a/requirements.txt
+++ b/requirements.txt
@@ -2,36 +2,39 @@ asgiref==3.6.0
 astor==0.8.1
 autograd==1.5
 autograd-gamma==0.5.0
+certifi==2022.12.7
 contourpy==1.0.7
 cycler==0.11.0
-Django==4.2
+Django==4.1.7
 djangorestframework==3.14.0
 dnspython==2.3.0
 et-xmlfile==1.1.0
-fonttools==4.39.3
+fonttools==4.38.0
 formulaic==0.5.2
 future==0.18.3
 importlib-resources==5.12.0
 interface-meta==1.3.0
 kiwisolver==1.4.4
 lifelines==0.27.4
-matplotlib==3.7.1
+matplotlib==3.7.0
 numpy==1.24.2
-openpyxl==3.1.2
-packaging==23.1
-pandas==1.2.0
-Pillow==9.5.0
-plotly==5.14.1
+openpyxl==3.0.10
+packaging==23.0
+pandas==1.5.3
+patsy==0.5.3
+Pillow==9.4.0
+plotly==5.13.1
 pymongo==4.3.3
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==1.0.0
-pytz==2023.3
+pytz==2022.7.1
+retrying==1.3.4
 scipy==1.10.1
+seaborn==0.12.2
 six==1.16.0
-sqlparse==0.4.4
+sqlparse==0.4.3
 tenacity==8.2.2
 typing_extensions==4.5.0
-tzdata==2023.3
 wrapt==1.15.0
 zipp==3.15.0
