--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,7 @@ http {
 
     server {
         listen 80;
-        server_name exDoSurvive.com;
+        server_name dosurvive.lab.nycu.edu.tw;
 
         location / {
             proxy_pass http://web;
